Completed next day.
Made wonderful progress on pawn inputs and camera movement. It's a lot better now! Need to work on camera zoom and light walls next. That'll be a trip.

--- a/monthlyGames/fLight Bikes (June 2023)/fLightBikes/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/monthlyGames/fLight Bikes (June 2023)/fLightBikes/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -119,7 +119,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1280,Y=720)
 LastExecutedLaunchDevice=Windows@DESKTOP-7VGDNO2
 LastExecutedLaunchName=DESKTOP-7VGDNO2
 LastExecutedPIEPreviewDevice=
@@ -162,9 +162,9 @@ MRUItem1=/Game/testLevel
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 basicBike_C=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate
 K2Node_InputKey=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate
-K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate
+K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
-SceneComponent=
+SceneComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 LandscapeStreamingProxy=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate
 CameraComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 StaticMeshActor=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
@@ -280,9 +280,9 @@ PlayerState=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper
 PlayerCameraManager=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate
 BP_PlayerBase_C=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
-InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Inputs/CameraControls.CameraControls,InputMappingContext.Mappings.ActionMappings./Game/Inputs/CameraLook.CameraLook,InputMappingContext.Mappings.ActionMappings./Game/Inputs/CameraZoom.CameraZoom,InputMappingContext.Mappings.ActionMappings./Game/Inputs/Turn.Turn,InputMappingContext.Mappings.ActionMappings.None
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Inputs/CameraControls.CameraControls
 InputAction=
-K2Node_EnhancedInputAction=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate
+K2Node_EnhancedInputAction=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 EditorStyleSettings=EditorKeyboardShortcutSettings.MainFrame.SwitchProject
@@ -347,13 +347,14 @@ StaticMeshComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,Propert
 BP_BikeChar_C=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 P_Bike_C=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 blankLevel_C=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
-C_PlayerBike_C=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
+C_PlayerBike_C=
 Actor=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 PrimitiveComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 PlayerStartPIE=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 ParticleEventManager=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 BillboardComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 FloatingPawnMovement=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
+SpringArmComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 
 [EditorStartup]
 LastLevel=/Game/blankLevel
@@ -362,6 +363,7 @@ LastLevel=/Game/blankLevel
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Blueprints/P_Bike.P_Bike
+OpenAssetsAtExit=/Game/Inputs/BikeControls.BikeControls
 OpenAssetsAtExit=/Game/Blueprints/C_PlayerBike.C_PlayerBike
 
 [ContentBrowser]
@@ -1538,6 +1540,14 @@ GameSession.Physics=True
 GameSession.Networking=True
 GameSession.Actor=True
 C_PlayerBike_C.Cooking=False
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+SpringArmComponent.Physics=False
+K2Node_VariableSet.Events=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/P_Bike.P_Bike;
@@ -1547,20 +1557,21 @@ RecentlyPlaced=/Game/Blueprints/basicBike.basicBike;
 RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Cube.Shape_Cube;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_PlayerBase
-MRUItem1=/Game/Inputs/BikeControls
-MRUItem2=/Game/Blueprints/BP_GamemodeBase
-MRUItem3=/Game/Blueprints/C_PlayerBike
-MRUItem4=/Game/Blueprints/P_Bike
-MRUItem5=/Game/Inputs/Turn
-MRUItem6=/Game/Blueprints/BP_BikeChar
-MRUItem7=/Game/Blueprints/BP_Bike
-MRUItem8=/Game/Inputs/CameraZoom
-MRUItem9=/Game/Inputs/CameraLook
-MRUItem10=/Game/Inputs/CameraControls
-MRUItem11=/Game/blankLevel
-MRUItem12=/Game/Blueprints/basicBike
-MRUItem13=/Game/Blueprints/NewBlueprint
+MRUItem0=/Game/Inputs/CameraReset
+MRUItem1=/Game/Blueprints/C_PlayerBike
+MRUItem2=/Game/Inputs/BikeControls
+MRUItem3=/Game/Blueprints/P_Bike
+MRUItem4=/Game/Blueprints/BP_PlayerBase
+MRUItem5=/Game/Blueprints/BP_GamemodeBase
+MRUItem6=/Game/Inputs/Turn
+MRUItem7=/Game/Blueprints/BP_BikeChar
+MRUItem8=/Game/Blueprints/BP_Bike
+MRUItem9=/Game/Inputs/CameraZoom
+MRUItem10=/Game/Inputs/CameraLook
+MRUItem11=/Game/Inputs/CameraControls
+MRUItem12=/Game/blankLevel
+MRUItem13=/Game/Blueprints/basicBike
+MRUItem14=/Game/Blueprints/NewBlueprint
 
 [DetailCategoriesAdvanced]
 PropertyWrapper.Variable=False
@@ -1577,9 +1588,12 @@ P_Bike_C.Replication=False
 C_PlayerBike_C.Actor=True
 C_PlayerBike_C.Tick=True
 C_PlayerBike_C.Cooking=True
+CameraComponent.ComponentTick=False
+CameraComponent.CameraOptions=False
+Blueprint.ClassOptions=False
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=AssetCheck
 
 [DetailPropertyExpansion]
 basicBike_C=
@@ -1592,7 +1606,7 @@ EditorExperimentalSettings="\"Object\" \"Object.Blueprints\" "
 InputSettings="\"Object\" "
 InputAction="\"Object\" "
 DataAsset="\"Object\" "
-InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[0].Modifiers\" \"Object.Mappings.Mappings.Mappings[1]\" \"Object.Mappings.Mappings.Mappings[1].Modifiers\" \"Object.Mappings.Mappings.Mappings[2]\" \"Object.Mappings.Mappings.Mappings[2].Modifiers\" \"Object.Mappings.Mappings.Mappings[4].Triggers\" \"Object.Mappings.Mappings.Mappings[4].Modifiers\" \"Object.Mappings.Mappings.Mappings[5]\" "
+InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[1]\" \"Object.Mappings.Mappings.Mappings[2]\" \"Object.Mappings.Mappings.Mappings[5]\" \"Object.Mappings.Mappings.Mappings[6]\" "
 LevelEditorPlaySettings="\"Object\" "
 BP_PlayerBase_C=
 Character=
@@ -1797,6 +1811,8 @@ EdGraphNode="\"Object\" "
 /Game/blankLevel.blankLevel:PersistentLevel.blankLevel=0
 /Game/Blueprints/P_Bike.P_Bike=0
 /Game/Blueprints/C_PlayerBike.C_PlayerBike=0
+/Game/Blueprints/P_Bike.P_Bike_C:Camera_GEN_VARIABLE=0
+/Game/Inputs/CameraReset.CameraReset=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3063,4 +3079,10 @@ WmfMediaSettings=True
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=True
+DeleteConfirmationFunction_Warning=True
+
+[PropertyWindowWidths]
+PropertyEditorToolkit_PinAsColumnHeader=24
+Property=0.5
+Value=1
 
