--- a/monthlyGames/fLight Bikes (June 2023)/fLightBikes/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/monthlyGames/fLight Bikes (June 2023)/fLightBikes/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -119,7 +119,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1280,Y=720)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=Windows@DESKTOP-7VGDNO2
 LastExecutedLaunchName=DESKTOP-7VGDNO2
 LastExecutedPIEPreviewDevice=
@@ -341,13 +341,13 @@ GameplayTagsDeveloperSettings=EditorKeyboardShortcutSettings.MainFrame.SwitchPro
 LogVisualizerSettings=EditorKeyboardShortcutSettings.MainFrame.SwitchProject
 K2Node=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 Blueprint=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
-BoxComponent=
+BoxComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 BP_Bike_C=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 StaticMeshComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 BP_BikeChar_C=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 P_Bike_C=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 blankLevel_C=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
-C_PlayerBike_C=
+C_PlayerBike_C=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 Actor=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 PrimitiveComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 PlayerStartPIE=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
@@ -355,6 +355,8 @@ ParticleEventManager=PropertyWrapper.DefaultValueCategory.Delta Transform,Proper
 BillboardComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 FloatingPawnMovement=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 SpringArmComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
+BikeWall_C=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
+VectorFieldComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 
 [EditorStartup]
 LastLevel=/Game/blankLevel
@@ -363,8 +365,9 @@ LastLevel=/Game/blankLevel
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Blueprints/P_Bike.P_Bike
-OpenAssetsAtExit=/Game/Inputs/BikeControls.BikeControls
 OpenAssetsAtExit=/Game/Blueprints/C_PlayerBike.C_PlayerBike
+OpenAssetsAtExit=/Game/Blueprints/BikeWall.BikeWall
+OpenAssetsAtExit=/Game/Inputs/BikeControls.BikeControls
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -399,7 +402,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/StarterContent/Shapes
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -1548,30 +1551,61 @@ K2Node_FunctionEntry.Inputs=True
 K2Node_FunctionEntry.Outputs=True
 SpringArmComponent.Physics=False
 K2Node_VariableSet.Events=True
+BikeWall_C.Tick=True
+BikeWall_C.Replication=True
+BikeWall_C.Rendering=True
+BikeWall_C.Collision=True
+BikeWall_C.Actor=True
+BikeWall_C.Input=True
+BikeWall_C.HLOD=True
+BikeWall_C.Physics=True
+BikeWall_C.WorldPartition=True
+BikeWall_C.Events=True
+BikeWall_C.Default=True
+VectorFieldComponent.Variable=True
+VectorFieldComponent.TransformCommon=True
+VectorFieldComponent.Sockets=True
+VectorFieldComponent.VectorFieldComponent=True
+VectorFieldComponent.ComponentTick=True
+VectorFieldComponent.HLOD=True
+VectorFieldComponent.Rendering=True
+VectorFieldComponent.Physics=True
+VectorFieldComponent.PathTracing=True
+VectorFieldComponent.Collision=True
+VectorFieldComponent.Lighting=True
+VectorFieldComponent.Navigation=True
+VectorFieldComponent.Tags=True
+VectorFieldComponent.ComponentReplication=True
+VectorFieldComponent.Activation=True
+VectorFieldComponent.Cooking=True
+VectorFieldComponent.Events=True
+BikeWall_C.TransformCommon=True
+BikeWall_C.Networking=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Cube.Shape_Cube;
 RecentlyPlaced=/Game/Blueprints/P_Bike.P_Bike;
 RecentlyPlaced=/Game/StarterContent/Architecture/Floor_400x400.Floor_400x400;
 RecentlyPlaced=/Game/Blueprints/BP_PlayerBase.BP_PlayerBase;
 RecentlyPlaced=/Game/Blueprints/basicBike.basicBike;
-RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Cube.Shape_Cube;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Inputs/CameraReset
-MRUItem1=/Game/Blueprints/C_PlayerBike
-MRUItem2=/Game/Inputs/BikeControls
-MRUItem3=/Game/Blueprints/P_Bike
-MRUItem4=/Game/Blueprints/BP_PlayerBase
-MRUItem5=/Game/Blueprints/BP_GamemodeBase
-MRUItem6=/Game/Inputs/Turn
-MRUItem7=/Game/Blueprints/BP_BikeChar
-MRUItem8=/Game/Blueprints/BP_Bike
-MRUItem9=/Game/Inputs/CameraZoom
-MRUItem10=/Game/Inputs/CameraLook
-MRUItem11=/Game/Inputs/CameraControls
-MRUItem12=/Game/blankLevel
-MRUItem13=/Game/Blueprints/basicBike
-MRUItem14=/Game/Blueprints/NewBlueprint
+MRUItem0=/Game/Inputs/Turn
+MRUItem1=/Game/Inputs/BikeControls
+MRUItem2=/Game/Blueprints/BikeWall
+MRUItem3=/Game/Blueprints/C_PlayerBike
+MRUItem4=/Game/Blueprints/P_Bike
+MRUItem5=/Game/Inputs/CameraReset
+MRUItem6=/Game/Blueprints/BP_PlayerBase
+MRUItem7=/Game/Blueprints/BP_GamemodeBase
+MRUItem8=/Game/Blueprints/BP_BikeChar
+MRUItem9=/Game/Blueprints/BP_Bike
+MRUItem10=/Game/Inputs/CameraZoom
+MRUItem11=/Game/Inputs/CameraLook
+MRUItem12=/Game/Inputs/CameraControls
+MRUItem13=/Game/blankLevel
+MRUItem14=/Game/Blueprints/basicBike
+MRUItem15=/Game/Blueprints/NewBlueprint
 
 [DetailCategoriesAdvanced]
 PropertyWrapper.Variable=False
@@ -1591,6 +1625,9 @@ C_PlayerBike_C.Cooking=True
 CameraComponent.ComponentTick=False
 CameraComponent.CameraOptions=False
 Blueprint.ClassOptions=False
+BoxComponent.ComponentTick=False
+BoxComponent.Rendering=True
+BikeWall_C.Collision=True
 
 [MessageLog]
 LastLogListing=AssetCheck
@@ -1796,6 +1833,7 @@ SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
 EdGraphNode="\"Object\" "
+VectorFieldComponent="\"Object\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/basicBike.basicBike=0
@@ -1813,6 +1851,7 @@ EdGraphNode="\"Object\" "
 /Game/Blueprints/C_PlayerBike.C_PlayerBike=0
 /Game/Blueprints/P_Bike.P_Bike_C:Camera_GEN_VARIABLE=0
 /Game/Inputs/CameraReset.CameraReset=0
+/Game/Blueprints/BikeWall.BikeWall=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
