--- a/monthlyGames/fLight Bikes (June 2023)/fLightBikes/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/monthlyGames/fLight Bikes (June 2023)/fLightBikes/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -159,11 +159,11 @@ MRUItem0=/Game/blankLevel
 MRUItem1=/Game/testLevel
 
 [DetailCustomWidgetExpansion]
-PropertyWrapper=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform,BoxComponent.Collision.Collision
 basicBike_C=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate
 K2Node_InputKey=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate
-K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
-K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
+K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform,BoxComponent.Collision.Collision
+K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform,BoxComponent.Collision.Collision
 SceneComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 LandscapeStreamingProxy=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate
 CameraComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
@@ -282,7 +282,7 @@ BP_PlayerBase_C=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWra
 SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Inputs/CameraControls.CameraControls
 InputAction=
-K2Node_EnhancedInputAction=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
+K2Node_EnhancedInputAction=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform,BoxComponent.Collision.Collision
 CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 EditorStyleSettings=EditorKeyboardShortcutSettings.MainFrame.SwitchProject
@@ -341,7 +341,7 @@ GameplayTagsDeveloperSettings=EditorKeyboardShortcutSettings.MainFrame.SwitchPro
 LogVisualizerSettings=EditorKeyboardShortcutSettings.MainFrame.SwitchProject
 K2Node=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 Blueprint=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
-BoxComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform,BoxComponent.Collision.Collision
+BoxComponent=BoxComponent.Collision.Collision
 BP_Bike_C=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 StaticMeshComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 BP_BikeChar_C=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
@@ -355,7 +355,7 @@ ParticleEventManager=PropertyWrapper.DefaultValueCategory.Delta Transform,Proper
 BillboardComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 FloatingPawnMovement=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 SpringArmComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
-BikeWall_C=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
+BikeWall_C=
 VectorFieldComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
@@ -368,7 +368,6 @@ CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Blueprints/BikeWall.BikeWall
 OpenAssetsAtExit=/Game/Blueprints/P_Bike.P_Bike
-OpenAssetsAtExit=/Game/Blueprints/C_PlayerBike.C_PlayerBike
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -403,7 +402,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/StarterContent/Shapes
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -1606,9 +1605,9 @@ RecentlyPlaced=/Game/Blueprints/BP_PlayerBase.BP_PlayerBase;
 RecentlyPlaced=/Game/Blueprints/basicBike.basicBike;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/C_PlayerBike
-MRUItem1=/Game/Blueprints/P_Bike
-MRUItem2=/Game/Blueprints/BikeWall
+MRUItem0=/Game/Blueprints/P_Bike
+MRUItem1=/Game/Blueprints/BikeWall
+MRUItem2=/Game/Blueprints/C_PlayerBike
 MRUItem3=/Engine/EngineSky/SM_SkySphere
 MRUItem4=/Game/Inputs/Turn
 MRUItem5=/Game/Inputs/BikeControls
@@ -1645,11 +1644,12 @@ Blueprint.ClassOptions=False
 BoxComponent.ComponentTick=False
 BoxComponent.Rendering=True
 BikeWall_C.Collision=True
-BoxComponent.Collision=False
+BoxComponent.Collision=True
 StaticMeshComponent.ComponentTick=False
 StaticMeshComponent.VirtualTexture=False
 SpringArmComponent.Collision=False
 SpringArmComponent.Rendering=False
+EditorLoadingSavingSettings.Startup=False
 
 [MessageLog]
 LastLogListing=PIE
@@ -1830,11 +1830,11 @@ DataValidationSettings="\"Object\" "
 GameplayDebuggerUserSettings="\"Object\" "
 GameplayTagsDeveloperSettings="\"Object\" "
 LogVisualizerSettings="\"Object\" "
-SceneComponent="\"Object\" "
-ActorComponent="\"Object\" "
-BoxComponent="\"Object\" "
-ShapeComponent="\"Object\" "
-PrimitiveComponent="\"Object\" "
+SceneComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+ActorComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+BoxComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+ShapeComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 StaticMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 FloatingPawnMovement="\"Object\" "
@@ -3150,4 +3150,20 @@ DeleteConfirmationFunction_Warning=True
 PropertyEditorToolkit_PinAsColumnHeader=24
 Property=0.5
 Value=1
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+AutoSaveMaxBackups=10
+AutoSaveMethod=BackupAndRestore
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=True
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
+bAutomaticallyCheckoutOnAssetModification=False
+bSCCUseGlobalSettings=False
 
